
[metadata]
name = pongenv
description = An OpenAi gym environment for the game pong that can be use to train some Agents.
author = Alex Mboutchouang
author_email = mboutchouangalex@gmail.com
license = MIT
version = attr: pongenv.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Zaker237/pongenv
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    setuptools

[options.packages.find]
exclude =
    arpeggio.tests

[options.extras_require]
test =
    pytest
    coverage

[flake8]
ignore = E305
exclude =
    .git,
    __pycache__,
    venv,
    .tox
max-line-length = 90